spacing issues

--- a/assets/about.css
+++ b/assets/about.css
@@ -44,7 +44,8 @@ body {
 }
 
 .wrapper {
-    padding: 7%;
+    padding: 5% 7% 7%;
+
 }
 
 .wrapper .left {
@@ -62,6 +63,7 @@ body {
 
 .wrapper .left img {
     width: 100%;
+    padding-bottom: 5%;
 }
 
 .wrapper .right img {
